--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -369,7 +369,8 @@
    "source": [
     "* **[External Recon](#activedirexternalrecon)**\n",
     "* **[Initial Domain Enumeration](#activedirinitialdomainenum)**\n",
-    "* **[Enumerating & Retrieving Password Policies](#activedirenumetretrpasswdpols)**"
+    "* **[Enumerating & Retrieving Password Policies](#activedirenumetretrpasswdpols)**\n",
+    "* **[Enumerating Security Controls](#activedirenumseccontrols)**"
    ]
   },
   {
@@ -8418,6 +8419,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id=\"activedirenumseccontrols\"></a>\n",
+    "\n",
+    "#### **`Enumerating Security Controls`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After gaining a foothold, get a feeling for the defensive state of the hosts, enumerate the domain further now that the visibility is not restricted, and, if necessary, work at \"living off the land\" by using tools that exist natively on the hosts. It is important to understand the security controls in place in an organization as the products in use can affect the tools that are used for AD enumeration, as well as exploitation and post-exploitation. Understanding the protections \n",
+    "\n",
+    "**<u>Windows Defender</u>**\n",
+    "\n",
+    "Windows Defender has greatly improved over the years and, by default, will block tools like PowerView. The built-in PowerShell cmdlet `Get-MpComputerStatus` can be used to get the current Defender Status. If the **RealTimeProtectionEnabled** parameter is set to True, Defender is enabled on the system:\n",
+    "```powershell\n",
+    "Get-MpComputerStatus\n",
+    "\n",
+    "```\n",
+    "**<u>AppLocker</u>**\n",
+    "\n",
+    "AppLocker is Microsoft's application whitelist software, and it gives system administrators control over which applications and files users can run. It provides granular control over executables, scripts, WIndows installer files, DLLs, packaged apps, and packed app installers. It is common for organizations to block cmd.exe and PowerShell.exe and write access to certain directories, but this can all be bypassed. Organizations also often focus on blocking the PowerShell.exe executable, but forget about the other PowerShell executable locations like `%SystemRoot%\\SysWOW64\\WindowsPowerShell\\v1.0\\powershell.exe` or `PowerShell_ISE.exe`. These can sometimes be called from different locations, but sometimes, there are more stringent AppLocker policies that require more creativity to bypass:\n",
+    "```powershell\n",
+    "Get-AppLockerPolicy -Effective | select -ExpandProperty RuleCollections\n",
+    "\n",
+    "```\n",
+    "**<u>PowerShell Constrained Language Mode</u>**\n",
+    "\n",
+    "This mode locks down many of the features needed to use PowerShell effectively, like blocking COM objects, only allowing approved .NET types, XAML-based workflows, PowerShell class, and more. Whether in Full Language Mode or Constrained Language Mode, either can be quickly enumerated as follows:\n",
+    "```powershell\n",
+    "$ExecutionContext.SessionState.LanguageMode     #will output which mode is used\n",
+    "\n",
+    "```\n",
+    "**<u>LAPS</u>**\n",
+    "\n",
+    "**Local Administrator Password Solution (LAPS)** is used to randomize and rotate local administrator passwords on Windows hosts and prevent lateral movement. DOmain users who can read the LAPS password set for machines with LAPS installed can be enumerated with the LAPSToolKit. One function is parsing ExtendedRights for all computers with LAPS enabled, which will show groups specifically delegated to read LAPS passwords, which are often users in protected groups. An account that has joined a computer to a domain receives All Extended Rights over that host, which gives the account tha ability to read passwords. \n",
+    "\n",
+    "Enumeration can show a user account that can read the LAPS password on a host, yielding a list of AD users that can read LAPS passwords:\n",
+    "```powershell\n",
+    "Find-LAPSDelegatedGroups\n",
+    "\n",
+    "```\n",
+    "The **Find-AdmPwdExtendedRights** checks the rights on each computer with LAPS enabled for any groups with read access and users with \"All Extended Rights.\" Users with these rights can read LAPS passwords and may be less protected with users in delegated grouos:\n",
+    "```powershell\n",
+    "Find-AdmPwdExtendedRights\n",
+    "\n",
+    "```\n",
+    "Finally, the **Get-LAPSComputers** function can be used to searh for computers that have LAPS enabled when passwords expire; it also contains passwords in cleartext if the attacker has access:\n",
+    "```powershell\n",
+    "Get-LAPSComputers\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id=\"activedirinattckvectors\"></a>\n",
     "\n",
     "### **`Initial Attack Vectors`**"
@@ -8553,7 +8610,81 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "To conduct a successful password spraying attack, the attacker first needs to gather a list of valid users by using the following methods:\n",
+    "* Leveraging an SMB NULL session to retrieve a complete list of domain users from the domain controller\n",
+    "\n",
+    "* Using an LDAP anonymous bind to query LDAP anonymously and pull down the domain user list\n",
+    "\n",
+    "* Using a tool like `Kerbrute` to validate users using a word list from a source like the `statistically-likely-usernames` repo, or gathered by using a tool like `linkedin2username` to create a list of potentially valid users\n",
+    "\n",
+    "* Using a set of credentials from a Linux or WIndows attack system either provided by the client or obtained through another means, like LLMNR/NBT-NS response poisoning using Responder or even a successful password spray using a smaller wordlist\n",
+    "\n",
+    "Regardless of the chosen method, it is also important to consider the domain password policy. If there is an **SMB NULL session, LDAP anonymous bind, or a set of valid credentials,** the password policy can be enumerated. This policy can be useful because the minimum password length and whether or not password complexity is enabled can help formulate the list of password to use in the spray attempts. Knowing the account lockout threshold and bad password timer will disclose how many spray attempts can be done at a time without locking out any accounts, and how many minutes should be between spray attempts. \n",
+    "\n",
+    "**If on an internal machine without valid domain credentials, look for SMB NULL sessions or LDAP anonymous binds on domain controllers.** Either of these will allow the attacker to obtain an accurate list of all users with AD and the password policy. However, if the attacker already has credentials for a domain user or SYSTEM access on a Windows host, then they can easily query AD for this information. It is possible to do this using the SYSTEM account because it can impersonate the computer\n",
+    "* A computer object is treated as a domain user account, but it can authenticate across forest trusts\n",
+    "* If no valid domain accounts are accessible, and SMB NULL sessions and LDAP anonymous binds are not possible, create a user list using external resources, like email harvesting and Linkedin\n",
+    "   * This user list will not be as complete, but it may be enough to grant access to AD\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**<u>SMB NULL Session to Pull User List</u>**\n",
+    "\n",
+    "By using the following syntax, `enum4linux` can disclose valid user accounts if SMB NULL sessions are possible:\n",
+    "```bash\n",
+    " enum4linux -U x.x.x.x  | grep \"user:\" | cut -f2 -d\"[\" | cut -f1 -d\"]\"\n",
+    "\n",
+    "```\n",
+    "If **`rpcclient` allows anonymous connections**, the enumdomusers command can be used to make a target user list:\n",
+    "```bash\n",
+    "rpcclient -U \"\" -N x.x.x.x\n",
+    "\n",
+    "rpcclient $> enumdomusers \n",
+    "\n",
+    "```\n",
+    "Finally, **`CrackMapExec` can be used with the --users flag.** This will show the badpwdcount (invalid login attempts), so any accounts that are close to the lockout threshold can be removed from the list. This also show the baddpwdtime, which is the date and time of the last bad password attempt, enabling an attacker to see how close an account is to having its badpwdcount reset. In an environment with multiple domain controllers, this value is maintained separately on each one. To get an accurate total of the account't bad password attempts, query each domain controller and use the sum of the values or query the domain controller with the PDC Emulator FSMO role:\n",
+    "```bash\n",
+    "crackmapexec smb x.x.x.x --users\n",
+    "\n",
+    "```\n",
+    "\n",
+    "**<u>Gathering Users with LDAP Anonymous</u>**\n",
+    "\n",
+    "Many tools can be used to gather users when an LDAP anonymous bind is found, including windapsearch and ldapsearch.\n",
+    "\n",
+    "\n",
+    "If `ldapsearch` is used, it is necessary to specify a valid LDAP search filter\"\n",
+    "```bash\n",
+    "ldapsearch -h x.x.x.x -x -b \"DC=DOMAIN_CONTROLLER,DC=LOCAL\" -s sub \"(&(objectclass=user))\"  | grep sAMAccountName: | cut -f2 -d\" \"\n",
+    "\n",
+    "```\n",
+    "To enumerate valid users, `windapseach` will be easier, although knowing how to create LDAP search filters is still very important. With the following syntax, anonymous access is specified by providing a blank username with the -u flag; the -U flag tells the tool to only retrieve users:\n",
+    "```bash\n",
+    "./windapsearch.py --dc-ip x.x.x.x -u \"\" -U\n",
+    "\n",
+    "```\n",
+    "\n",
+    "**<u>Enumerating Users with Kerbrute</u>**\n",
+    "\n",
+    "Again, if there is no access at all in the internal network, kerbrute can be used to enumerate valid AD accounts and for password spraying. Kerbrute uses Kerberos Pre-Authentication, which is a much faster and potentially stealthier way to perform password spraying. \n",
+    "\n",
+    "This method does not generate Windows event ID 4625: An account failed to log on, or a logon failure which is often monitored for. The tool sends TGT requests to the domain controller without Kerberos Pre-Authentication to perform username enumeration. **If the KDC responds with the error PRINCIPAL UNKNOWN, the username is invalid.** Whenever the KDC prompts for Kerberos Pre-Authentication, this signals that the username exists, and the tool will mark it as valid. This method of username enumeration does not cause logon failures and will not lock out accounts; however, once a list of valid users is obtained and this tool is used for password spraying, failed Kerberos Pre-Authentication attempts will count towards an account's failed login accounts and can lead to account lockout.\n",
+    "\n",
+    "Using Kerbrute for username enumeration will generate Windows event ID 4768: A Kerberos authentication ticket (TGT) was requested. This will only be triggered if Kerberos event logging is enabled via Group Policy. The following method uses the complete domain controller, the IP address of the domain controller, and a word list with common usersnames; the `statistically-likely-usernames`  repo can be used for this attack:\n",
+    "```bash\n",
+    "kerbrute userenum -d domain.controller --dc x.x.x.x /usr/share/wordlists\n",
+    "\n",
+    "```\n",
+    "\n",
+    "**<u>Credentialed Enumeration to Build our User List</u>**\n",
+    "\n",
+    "With valid credentials, any of the aforementioned tools can be used to build a user list. The easiest way is with `CrackMapExec`:\n",
+    "```bash \n",
+    "crackmapexec smb x.x.x.x -u username -p password --users\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8567,7 +8698,34 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Once the password policy and valid users have been  enumerated, a password spray attack can be conducted. \n",
+    "\n",
+    "`Rpcclient` is the best choice from Linux. An important consideration is that a valid login is not immediately apparent with rpcclient, with the response Authority Name indicating a successful login. Invalid login attempts can be filtered out by grepping for Authroity in the response. The following Bash one-liner can be used to perform the attack:\n",
+    "```bash\n",
+    "for u in $(cat valid_user_list.txt); do rpcclient -U \"$u%potential_password\" -c \"getusername;quit\" x.x.x.x | grep Authority; done\n",
+    "\n",
+    "```\n",
+    "`Kerbrute` can also be used for the same attack:\n",
+    "```bash\n",
+    "kerbrute passwordspray -d domain.controller --dc x.x.x.x valid_user_list.txt potential_password\n",
+    "\n",
+    "```\n",
+    "`CrackMapExec` can also be used, as it can accept a text file of usernames to be run against a single password in a spraying attack. The following syntax greps for + to filter out logon failures and hone in on only valid login attempts:\n",
+    "```bash\n",
+    "sudo crackmapexec smb x.x.x.x -u valid_user_list.txt -p potential_password | grep +\n",
+    "\n",
+    "```\n",
+    "\n",
+    "**<u>Local Administrator Password Reuse</u>**\n",
+    "\n",
+    "Internal password spraying is not only possible with domain user accounts; if administrative access and the NTLM password hash or cleartext password for the local administrator account (or another privileged local account) is obtained, this can be attempted across multiple hosts in the network. Local administrator account password reuse is widespread due to the use of gold images in automated deployments and the perceived ease of management by enforcing the same password across multiple hosts\n",
+    "\n",
+    "Again, `CrackMapExec` can be used for this attack. It is worth targeting high-value hosts such as SQL or Microsoft Exchange servers, as they are more likely to have a highly privileged user logged in or have their credentials persistent in memory. Sometimes, the NTLM hash for the local administrator account can be retrieved from the local SAM database. In these instances, spray the NT hash across an entire subnet to hunt for local administrator accounts with the same password set. The `--local-auth` flag tells the tool to only attempt to log in once on each machine, removing any risk of account lockout:\n",
+    "```bash\n",
+    "sudo crackmapexec smb --local-auth x.x.x.x/CIDR -u administrator -H <NT Part of Hash> | grep +\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -8581,7 +8739,17 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "From a foothold on a domain-joined Windos host, the [DomainPasswordSpray](https://github.com/dafthack/DomainPasswordSpray_) tool is highly effective. If an attacker is authenticated to the domain, the tool will automatically generate a user list from AD, query the domain password policy, and exclude user accounts within one attempt of locking out. A user list can also be supplied if not authenticated to the domain. \n",
+    "\n",
+    "In this case, since the hostis domain-joined, the `-UserList` flag is skipped and the tool generates a list. Supply the password flag and one single password, then use the `-OutFile` flag to write the output to a file for later use:\n",
+    "```powershell\n",
+    "Import-Module .\\DomainPasswordSpray.ps1\n",
+    "Invoke-DomainPasswordSpray -Password Welcome1 -OutFile spray_success -ErrorAction SilentlyContinue\n",
+    "\n",
+    "```\n",
+    "`Kerbrute` can also be used to perform the same user enumeration and spraying steps shown previously. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -10709,7 +10877,11 @@
     "/ip route print\n",
     "\n",
     "```\n",
+    "To enable ICMP traffic, use the following syntax:\n",
+    "```bash\n",
+    "/ip firewall filter add chain=input protocol=icmp action=accept\n",
     "\n",
+    "```\n",
     "If an incorrect IP address was added, first look at the corresponding number (denoted by the value under the # next to the interface). Once this is determined, it can be removed through the CLI:\n",
     "```bash\n",
     "/ip address remove <number>\n",
