--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -370,7 +370,10 @@
     "* **[External Recon](#activedirexternalrecon)**\n",
     "* **[Initial Domain Enumeration](#activedirinitialdomainenum)**\n",
     "* **[Enumerating & Retrieving Password Policies](#activedirenumetretrpasswdpols)**\n",
-    "* **[Enumerating Security Controls](#activedirenumseccontrols)**"
+    "* **[Enumerating Security Controls](#activedirenumseccontrols)**\n",
+    "* **[Credentialed Enumeration (Linux)](#activedircredenumlinux)**\n",
+    "* **[Credentialed Enumeration (Windows)](#activedircredenumwindows)**\n",
+    "* **[Native Windows Enumeration](#activedirnativewindowsenum)**"
    ]
   },
   {
@@ -8470,6 +8473,260 @@
     "Get-LAPSComputers\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"activedircredenumlinux\"></a>\n",
+    "\n",
+    "#### **`Credentialed Enumeration (Linux)`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once gaining a foothold in the domain, try to dig deeper with the low privilege domain user credentials. At this point, there should be a general idea about the domain's userbase and machines, so now enumerate the domain in depth. The domain user, computer attributes, group membership, Group Policy Objects, permissions, ACLs, trusts, etc. are of interest now. Most of the following tools will not work without valid domain user credentials at any permission level. So at a minimum, a user's cleartext password, NTLM password hash, or SYSTEM access on a domain-joined host is needed beyond this point. \n",
+    "\n",
+    "> Save all of the output to files to easily access it again later for reporting or use with other tools\n",
+    "\n",
+    "**<u>CrackMapExec</u>**\n",
+    "\n",
+    "First, use the SMB protocol to enumerate users and groups. The previously discovered domain controller should be targeted with the following command, as it holds all data in the domain database that is of interest. The credentials for the user should also be used to retrieve a **list of all domain users;** this will provide the user information, including data points like the badPwdCount attribute, which an be helpful when performing actions like targeted password spraying:\n",
+    "```bash\n",
+    "sudo crackmapexec smb x.x.x.x -u username -p password --users\n",
+    "\n",
+    "```\n",
+    "It is also possible to obtain a **complete listing of domain groups** with the following command. This will list groups within the domain and the number of users in each. The output also shows the built-in groups on the domain controller. Take note of key groups like Administrators, domain admins, executives, any groups that may contain privileged IT admins, etc. These groups will likely contain users with elevated privileges worth targeting:\n",
+    "```bash\n",
+    "sudo crackmapexec smb x.x.x.x -u username -p password --groups\n",
+    "\n",
+    "```\n",
+    "Now, target other hosts by seeing **what users are logged in** currently with the following command.A local admin may be used as a jump host or similar by administrative users. BloodHound can be used to hunt for user sessions as well, as it is used to view Domain User sessions graphically and quickly in many ways:\n",
+    "```bash\n",
+    "sudo crackmapexec smb x.x.x.x -u username -p password --loggedon-users\n",
+    "\n",
+    "```\n",
+    "The `--shares` flag can be used to **enumerate available shares on the remote host** and the level of access of the compromised user account has to each share (READ or WRITE access): \n",
+    "```bash\n",
+    "sudo crackmapexec smb x.x.x.x -u username -p password --shares\n",
+    "\n",
+    "```\n",
+    "Each directory can be spidered once digging into the shares. The module `spider_plus` will dig through each readable share on the host, list all readable files, and provide the results to a JSON file in `/tmp/cme_spider_plus`:\n",
+    "```bash\n",
+    "sudo crackmapexec smb x.x.x.x -u username -p password -M spider_plus --share 'Specific Share'\n",
+    "\n",
+    "```\n",
+    "**<u>SMBMap</u>**\n",
+    "\n",
+    "Again, SMBMap is generally used for enumerating SMB shares from a Linux host. It can be used to gather a listing of shares, permissions, and share contents if accessible. once access is obtained, it can be used to download and upload files and execute remote commands. Like CrackMapExec, SMBMap and a set of domain user credentials can be used to check for accessible shares on remote systems. Aside from listing shares, SMBMap can be used to recursively list directories, list the contents of a directory, search file contents, etc. This can be especially useful when pillaging shares:\n",
+    "```bash\n",
+    "smbmap -u username -p password -d DOMAIN.CONTROLLER -H x.x.x.x\n",
+    "\n",
+    "```\n",
+    "The output of this command will disclose the user's access and their permission levels. The following command does a recursive listing of the directories in the specified share:\n",
+    "```bash\n",
+    "smbmap -u username -p password -d DOMAIN.CONTROLLER -H x.x.x.x -R 'Share Name' --dir-only\n",
+    "\n",
+    "```\n",
+    "As the recursive listing goes deeper, it will output all the subdirectories within the higher-level directories. The use of `--dir-only` only provides the output of all the directories, but not all the files. \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**<u>RPCClient</u>**\n",
+    "\n",
+    "rpcclient was created for use with the Samba protocol and to provide extra functionality via MS-RPC. It can enumerate, add, change, and remove objects from AD. If SMB NULL sessions were discovered on the hosts, perform authenticated or unauthenticated enumeration using rpcclient on the domain controller. From an **unauthenticated standpoint, the following command can be done, creating a bound connection:**\n",
+    "```bash\n",
+    "rpcclient -U \"\" -N x.x.x.x\n",
+    "\n",
+    "```\n",
+    "While looking at users in rpcclient, there is a field called `rid`; this is a Relative Identifier, and is a unique identifier in hexadecimal used by Windows to track and identify objects. This will output a lot of information about the user, but to get the different user's RID, the following commands can be used whilst in the bound connection:\n",
+    "```bash\n",
+    "rpcclient $> enumdomusers\n",
+    "\n",
+    "queryuser 0x999 #RID value\n",
+    "\n",
+    "```\n",
+    "**<u>Impacket</u>** \n",
+    "\n",
+    "**`psexec.py`** creates a remote service by uploading a randomly-named executable to the ADMIN$ share on the target host. It then registers the service via RPC and the Windows Service Control Manager. Once established, communication happens over a named pipe, providing an interactive remote shell as SYSTEM on the victim host. To connect to a host with psexec, **credentials for a user with local administrator privileges are needed:**\n",
+    "```bash\n",
+    "psexec.py domain.controller/user:'password'@x.x.x.x\n",
+    "\n",
+    "```\n",
+    "Once the psexec module is executed, the attacker will be in the system32 directory on the target host. Verify this by running the *whoami* command. At this point, further enumeration, persistence, and lateral movement can be attempted.\n",
+    "\n",
+    "**`wmiexec.py`** uses a semi-interactive shell where commands are executed through Windows Management Instrumentation. It does not drop any files or executables on the target host and generates fewer logs than other modules. After connecting, it runs as the local admin user that was used to connect. This is a more stealthy approach to execution on hosts than other tools, but would still likely be caught by most modern AV and EDR systems:\n",
+    "```bash\n",
+    "wmiexec.py domain.controller/user:'password'@x.x.x.x\n",
+    "\n",
+    "```\n",
+    "**<u>Windapsearch</u>**\n",
+    "\n",
+    "Windapsearch can be used to enumerate users, groups, and computers from a Windows domain by using LDAP queries. The `--da` flag enumerates domain admins group members, and the `-PU` flag finds privileged users. The latter flag performs a recursive search for users with nested group membership:\n",
+    "```bash\n",
+    "python3 windapsearch.py --dc-ip x.x.x.x -u user@domain.controller -p password --da\n",
+    "\n",
+    "python3 windapsearch.py --dc-ip x.x.x.x -u user@domain.controller -p password -PU\n",
+    "\n",
+    "```\n",
+    "**<u>BloodHound</u>**\n",
+    "\n",
+    "Refer to the `Post-Compromise Enumeration` portion for more information on how to use the BloodHound ingestor. Once credentials are obtained, it is imperative to run BloodHound to find anything that may have been missed with the other tools. For a quick recap, use the following command to get the necessary JSON files to input in Neo4j (BloodHound GUI):\n",
+    "```bash\n",
+    "sudo bloodhound-python -u 'username' -p 'password' -ns x.x.x.x -d domain.controller -c all \n",
+    "\n",
+    "```\n",
+    "Once the JSON files are generated, start neo4j, sign in, and load the JSON files into the GUI:\n",
+    "```bash\n",
+    "sudo neo4j start    #instead of start, it is sometimes console\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"activedircredenumwindows\"></a>\n",
+    "\n",
+    "#### **`Credentialed Enumeration (Windows)`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is critical to find misconfigurations and permission issues that could lead to lateral and vertical movement. It is important to try and pillage file shares that the logged in user has access to, as these often contian sensitive data like credentials that can be used to extend the access. \n",
+    "\n",
+    "**<u>AD PowerShell Module</u>**\n",
+    "\n",
+    "The [AD PowerShell Module](https://learn.microsoft.com/en-us/powershell/module/activedirectory/?view=windowsserver2022-ps) is a group of PowerShell cmdlets for administering an AD environment from the CLI. It currently has 147 different cmdlets; while many of them are useful, the following are imperative to use while enumerating AD environments. Before using this module, make sure it is imported first. The `Get-Module` cmdlet lists all of the available modules, their version, and potential commands for use. This is a great way to see if anything like Git or custom administrator scripts are insstalled. If the module is not loaded, run the first command to load it for use:\n",
+    "```powershell\n",
+    "Import-Module ActiveDirectory\n",
+    "\n",
+    "Get-Module\n",
+    "\n",
+    "```\n",
+    "Once the AD module is imported, the following cmdlet can be used to enumerate the domain SID, domain functional level, any child domains, etc:\n",
+    "```powershell\n",
+    "Get-ADDomain\n",
+    "\n",
+    "```\n",
+    "The following command uses the` Get-ADUser` cmdlet, and filters for accounts with the ServicePrincipleName properly populated. This will **yield a listing of accounts that may be susceptible to a kerberoasting attack**:\n",
+    "```powershell\n",
+    "Get-ADUser -Filter {ServicePrincipalName -ne \"$null\"} -Properties ServicePrincipalName\n",
+    "\n",
+    "```\n",
+    "To verify domain trust relationships, the `Get-ADTrust` cmdlet can be used. This cmdlet will print out any trust relationships the domain has, which can be used to determine if they are trusts within the current forest or with domains in other forests, the type of trust, the direction of the trust, and the name of the domain the relationship is with. This cmdlet will be especially useful when looking to exploit child-to-parent trust relationships and attacking across forest trusts:\n",
+    "```powershell\n",
+    "Get-ADTrust -Filter *\n",
+    "\n",
+    "```\n",
+    "The `Get-ADGroup` cmdlet can be used to gather AD group information. The results of the first command can be used in the second command to get more detailed information about a particular group:\n",
+    "```powershell\n",
+    "Get-ADGroup -Filter * | select name\n",
+    "\n",
+    "Get-ADGroup -Identity \"Group Name\"\n",
+    "\n",
+    "```\n",
+    "It is possible to get a member listing of a group with the `Get-ADGroupMember` cmdlet, based on the previous command. This will essentially show the accounts that belong to the specified group.\n",
+    "```powershell\n",
+    "Get-ADGroupMember -Identity \"Group Name\"\n",
+    "\n",
+    "```\n",
+    "**<u>PowerView</u>**\n",
+    "\n",
+    "[PowerView](https://github.com/PowerShellMafia/PowerSploit/tree/master/Recon) provides a way to identify where users are logged in on a network, enumerate domain information such as users, computers, groups, ACLs, trusts, hunt for file shares, and passwords, perform Kerberoasting, etc. It requires more manual work to determine misconfigurations and relationships within the domain than BloodHound, but it can help identify subtle misconfigurations. Some of the most useful functions PowerView offers include:\n",
+    "\n",
+    "<center>\n",
+    "\n",
+    "|Command|Description|\n",
+    "|-------|-----------|\n",
+    "|`Export-PowerViewCSV`|Append results to a CSV file|\n",
+    "|`ConvertTo-SID`|Convert a User or group name to its SID value|\n",
+    "|`Get-DomainSPNTicket`|Requests the Kerberos ticket for a specified Service Principal Name (SPN) account|\n",
+    "|**Domain/LDAP Functions**|----|\t\n",
+    "|`Get-Domain`|Will return the AD object for the current (or specified) domain|\n",
+    "|`Get-DomainController`|Return a list of the Domain Controllers for the specified domain|\n",
+    "|`Get-DomainUser`|Will return all users or specific user objects in AD|\n",
+    "|`Get-DomainComputer`|Will return all computers or specific computer objects in AD|\n",
+    "|`Get-DomainGroup`|Will return all groups or specific group objects in AD|\n",
+    "|`Get-DomainOU`|Search for all or specific OU objects in AD|\n",
+    "|`Find-InterestingDomainAcl`|Finds object ACLs in the domain with modification rights set to non-built in objects|\n",
+    "|`Get-DomainGroupMember`|Will return the members of a specific domain group|\n",
+    "|`Get-DomainFileServer`|Returns a list of servers likely functioning as file servers|\n",
+    "|`Get-DomainDFSShare`|Returns a list of all distributed file systems for the current (or specified) domain|\n",
+    "|**GPO Functions**|----|\n",
+    "|`Get-DomainGPO`|Will return all GPOs or specific GPO objects in AD|\n",
+    "|`Get-DomainPolicy`|Returns the default domain policy or the domain controller policy for the current domain|\n",
+    "|**Computer Enumeration Functions**|----|\n",
+    "|`Get-NetLocalGroup`|Enumerates local groups on the local or a remote machine|\n",
+    "|`Get-NetLocalGroupMember`|Enumerates members of a specific local group|\n",
+    "|`Get-NetShare`|Returns open shares on the local (or a remote) machine|\n",
+    "|`Get-NetSession`|Will return session information for the local (or a remote) machine|\n",
+    "|`Test-AdminAccess`|Tests if the current user has administrative access to the local (or a remote) machine|\n",
+    "|**Threaded 'Meta'-Functions**|\n",
+    "|`Find-DomainUserLocation`|Finds machines where specific users are logged in|\n",
+    "|`Find-DomainShare`|Finds reachable shares on domain machines|\n",
+    "|`Find-InterestingDomainShareFile`|Searches for files matching specific criteria on readable shares in the domain|\n",
+    "|`Find-LocalAdminAccess`|Find machines on the local domain where the current user has local administrator access|\n",
+    "|**Domain Trust Functions**|----|\n",
+    "|`Get-DomainTrust`|Returns domain trusts for the current domain or a specified domain|\n",
+    "|`Get-ForestTrust`|Returns all forest trusts for the current forest or a specified forest|\n",
+    "|`Get-DomainForeignUser`|Enumerates users who are in groups outside of the user's domain|\n",
+    "|`Get-DomainForeignGroupMember`|Enumerates groups with users outside of the group's domain and returns each foreign member|\n",
+    "|`Get-DomainTrustMapping`|Will enumerate all trusts for the current domain and any others seen|\n",
+    "\n",
+    "</center>\n",
+    "\n",
+    "The `Get-DomainUser` function provides information on all users or specified users. The following example is the sytnax for a specific user:\n",
+    "```powershell\n",
+    "Get-DomainUser -Identity user -Domain domain.controller | Select-Object -Property name,samaccountname,description,memberof,whencreated,pwdlastset,lastlogontimestamp,accountexpires,admincount,userprincipalname,serviceprincipalname,useraccountcontrol\n",
+    "\n",
+    "```\n",
+    "To enumerate domain group information, the `Get-DomainGroupMember` function can be used to retrieve group-specific information. Adding the `-Recurse` flag tells PowerView that if it finds any groups that are part of the target group (nested group membership) to list out the members of those groups. Find users to target for potential elevation privileges. In this case, the following function will yield all members of the group who inherit Domain Admin rights via their group membership:\n",
+    "```powershell\n",
+    "Get-DomainGroupMember -Identity \"Group Name\" -Recurse\n",
+    "\n",
+    "```\n",
+    "The following function is used to enumerate domain trust mappings:\n",
+    "```powershell\n",
+    "Get-DomainTrustMapping\n",
+    "\n",
+    "```\n",
+    "The `Test-AdminAccess` function can e used to test for local admin access on either the current machine or a remote one. The computer name must be known for the first command. The same function can be performed for each host to see where there is administrative access:\n",
+    "```powershell\n",
+    "Test-AdminAccess -ComputerName host-name\n",
+    "\n",
+    "```\n",
+    "Check for users with the SPN attribute set; the samaccountname will disclose the account that may be vulnerable to a Kerberoasting attack:\n",
+    "```powershell\n",
+    "Get-DomainUser -SPN -Properties samaccountname,ServicePrincipalName\n",
+    "\n",
+    "```\n",
+    "**<u>Snaffler</u>**\n",
+    "\n",
+    "[Snaffler](https://github.com/SnaffCon/Snaffler) can be used to acquire credentials or other sensitive data in an AD environment. This tool works by obtaining a list of hosts iwthin the domain and then enumerating those hosts for shares and readable directories. Once that is done, it iterates through any directories readable by the logged in user and hunts for file. Snaffler, however, requires that it be run from a domain-joined host or in a domain-user context. \n",
+    "```powershell\n",
+    ".\\Snaffler.exe -s -d domain.controller -v data\n",
+    "```\n",
+    "Depending on what type of access the logged in user has, passwords, configuration files, SSH keys, or other data can be output to help expand the access. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id=\"activedirnativewindowsenum\"></a>\n",
+    "\n",
+    "#### **`Native Windows Enumeration`**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
