--- a/hnetwork_notes.ipynb
+++ b/hnetwork_notes.ipynb
@@ -360,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **[Enumeration](#activedirenumeration)**"
+    "#### **[Initial Enumeration](#activedirenumeration)**"
    ]
   },
   {
@@ -2081,7 +2081,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`When reversing a file, the first thing that should be done is determining the type of file. This can be done with the `file` command. Depending on the file type, either the `strings` command or the *`cat`* command can be used to read the readable strings within the file. It is also important to determine the file size; this can be done with the following command:\n",
+    "When reversing a file, the first thing that should be done is determining the type of file. This can be done with the `file` command. Depending on the file type, either the `strings` command or the *`cat`* command can be used to read the readable strings within the file. It is also important to determine the file size; this can be done with the following command:\n",
     "```bash\n",
     "ls -lh <file>\n",
     "\n",
@@ -2146,7 +2146,7 @@
     "When grepping for cmp and strcmp flags either through pseudo C code or assembly, a new virtual address space may appear as a hexadecimal location. In these cases, seek `s` to the virtual address space and print it. If searching for an expected value, it may appear in this space as plaintext or hexadecimal (which will need to be converted to ascii text in certain cases). \n",
     "\n",
     "The `rax2` command can be used to quickly convert between numeric bases and convert hexadecimal to ASCII. \n",
-    "> For both ghidra and r2, it is important to **consider obfuscation methods like XOR**`"
+    "> For both ghidra and r2, it is important to **consider obfuscation methods like XOR**"
    ]
   },
   {
@@ -8143,7 +8143,7 @@
    "source": [
     "<a id=\"activedirenumeration\"></a>\n",
     "\n",
-    "### **`Enumeration`**"
+    "### **`Initial Enumeration`**"
    ]
   },
   {
